create endpoiont for get case data by id
