# server/api/controllers/case/router.js
@@ -5,4 +5,5 @@ import isAuthenticated from "../../middlewares/isAuthenticated.jwt";
 export default express
   .Router()
   .post("/", isAuthenticated, controller.createCase)
-  .get("/", isAuthenticated, controller.getAllCases);
+  .get("/", isAuthenticated, controller.getAllCases)
+  .get("/:id", isAuthenticated, controller.getCaseByID);
